# mlops-project

./: .gitignore  Makefile  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
configs/: config.yaml
configs/model/: simple_model.yaml
configs/model/backbone/: resnet18.yaml
configs/model/head/: linear.yaml
configs/train/optimizer/: adam.yaml
configs/train/task/: classification.yaml
configs/train/trainer/: default.yaml
docker/: Dockerfile  run-server.sh
src/configs/: data.py  model.py  project.py  task.py  trainer.py
src/datamodules/: fashion_mnist.py
src/models/: backbones.py  heads.py  simple_model.py
src/schemas/: config_schema.py  datamodule_schema.py  model_schema.py  task_schema.py  trainer_schema.py
src/tasks/: classification.py
