[project]
name = "my-short-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "pydantic>=2.12.5",
    "pytorch-lightning>=2.6.1",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]
